# capy-docs

./: .gitignore  POC.html  POC.md  antora-playbook.yml
.github/workflows/: pages.yml
context/: Vinnie_GPT.md
docs/beast2/modules/ROOT/: nav.adoc
docs/beast2/modules/ROOT/pages/: concepts.adoc  faq.adoc  index.adoc  quickstart.adoc
docs/beast2/modules/ROOT/pages/guides/: http-server.adoc  static-content.adoc
docs/capy/: antora.yml  mrdocs.yml
upstream-rts/: CMakeLists.txt  README.adoc
upstream-rts/.github/workflows/: ci.yml
upstream-rts/cmake/: FindBrotli.cmake
upstream-rts/doc/: antora.yml  local-playbook.yml  mrdocs.yml
upstream-rts/doc/modules/ROOT/: nav.adoc
upstream-rts/doc/modules/ROOT/pages/: concepts.adoc  faq.adoc  index.adoc  quickstart.adoc
upstream-rts/doc/modules/ROOT/pages/guides/: injection.adoc  registering-services.adoc
upstream-rts/include/boost/: rts.hpp
upstream-rts/include/boost/rts/: application.hpp  brotli.hpp  datastore.hpp  polystore.hpp  polystore_fwd.hpp  zlib.hpp
upstream-rts/include/boost/rts/brotli/: decode.hpp  encode.hpp  error.hpp  shared_dictionary.hpp  types.hpp
upstream-rts/include/boost/rts/brotli/impl/: error.hpp
upstream-rts/include/boost/rts/detail/: call_traits.hpp  config.hpp  except.hpp  type_traits.hpp
upstream-rts/include/boost/rts/zlib/: compression_level.hpp  compression_method.hpp  compression_strategy.hpp  data_type.hpp  deflate.hpp  error.hpp  flush.hpp  inflate.hpp  stream.hpp
upstream-rts/include/boost/rts/zlib/impl/: error.hpp
upstream-rts/meta/: explicit-failures-markup.xml  libraries.json
upstream-rts/src/: application.cpp  datastore.cpp  polystore.cpp
upstream-rts/src/brotli/: error.cpp
upstream-rts/src/detail/: except.cpp
upstream-rts/src/zlib/: error.cpp
upstream-rts/src_brotli/: decode.cpp  encode.cpp  shared_dictionary.cpp
upstream-rts/src_zlib/: deflate.cpp  inflate.cpp  stream_cast.hpp
upstream-rts/test/: CMakeLists.txt  Jamfile
upstream-rts/test/cmake_test/: CMakeLists.txt  main.cpp
upstream-rts/test/unit/: CMakeLists.txt  Jamfile  application.cpp  brotli.cpp  datastore.cpp  polystore.cpp  rts.cpp  test_helpers.hpp  zlib.cpp
